# Halia

./: .gitmodules  .luaurc  .nvim.lua  CMakeLists.txt  Halia.core.d.luau  Halia.d.luau  LuwawRT.d.luau  abc.luau  main.luau  readme.md
CLI/: main.cpp
common/: common.cpp  platform_specific.cpp  util.cpp
common/include/: common.hpp
common/include/common/: Error_info.hpp  FlatStack.hpp  Flat_stack.hpp  NamecallAtom.hpp  Namecall_atom.h  Namecall_atom.hpp  common.hpp  comptime_enum.hpp  constext.hpp  metamethod.h  userdata_helpers.h  util.h  util.hpp
core/: Builtin_library.h  CoreLibrary.hpp  Event.cpp  FileUtils.cpp  FileUtils.hpp  core.cpp  library.h  library.hpp  lua_base_impl.cpp  std_defs.hpp
core/etc/: ErrorInfo.cpp  Error_info.cpp  FileUtils.cpp  Require.cpp  parse_project_configuration_file.cpp
core/include/Halia/: core_api.h
core/include/halia/: Cothread.hpp  Error_info.hpp  ProjectConfiguration.hpp  co_tasks.hpp  core.h  core.hpp  halia_api.h  halia_core_api.hpp  type_utils.h  type_utils.hpp
core/std/: co_tasks.cpp  io_interfaces.hpp
core/std/filesystem/: DirectoryEntry.cpp  Directory_entry.cpp  Path.cpp  here.hpp  init.cpp  init.h
core/std/math/: Matrix3.cpp  Vector2.cpp  Vector3.cpp  here.hpp  init.cpp  init.h
core/std/process/: Child.cpp  Child_process.cpp  Execution_feedback.cpp  Pid.cpp  Process.cpp  ProcessCallback.cpp  System_exit_callback.cpp  here.hpp  init.cpp  init.h  init.hpp
core/std/task/: init.cpp
include/: builtin.h  common.h  library.h  metamethod.h  runtime.h  userdata_helpers.hpp  util.h
resources/: LuwawRT.d.luau  builtin_defs.d.luau
resources/luau_library/: iterator.luau
runtimes/console/: main.cpp
src/: main.cpp  util.cpp
src/runtime/: Builtin_library.h  Require.cpp  Require.h  core.cpp  lua_base_impl.cpp
src/types/: Event.cpp
tests/: stdprocess.luau  tests.project.luau
