cmake_minimum_required(VERSION 3.22.2)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(runtimes_dir ${CMAKE_SOURCE_DIR}/runtimes)
set(resource_dir ${CMAKE_SOURCE_DIR}/resources)
set(luau_library_dir ${resource_dir}/luau_library)
set(resource_output_dir ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
set(core_dir ${CMAKE_SOURCE_DIR}/core)
set(common_dir ${CMAKE_SOURCE_DIR}/common)
project(Halia LANGUAGES CXX C)

find_package(blaze REQUIRED)
find_package(Boost REQUIRED COMPONENTS process date_time)
add_subdirectory(luau)
#common
file (GLOB_RECURSE common_files ${common_dir}/*.cpp)
add_library(Halia.common ${common_files})
target_include_directories(Halia.common PRIVATE ${common_dir} ${common_dir}/include/common)
target_include_directories(Halia.common PUBLIC ${common_dir}/include)
target_link_libraries(Halia.common PUBLIC Luau.VM Luau.Compiler Luau.CodeGen Luau.Config blaze::blaze Boost::process)
#core
file (GLOB_RECURSE core_files ${core_dir}/*.cpp)
add_library(Halia.core SHARED ${core_files})
target_compile_definitions(Halia.core PRIVATE BUILD_HALIA_CORE_DLL)
target_include_directories(Halia.core PRIVATE ${core_dir} ${core_dir}/include/halia)
target_include_directories(Halia.core PUBLIC ${core_dir}/include)
target_link_libraries(Halia.core PRIVATE Halia.common)
#runtime
file(GLOB_RECURSE rt_console_sources ${runtimes_dir}/console/*.cpp)
add_executable(Halia.runtime.console ${rt_console_sources})
target_link_libraries(Halia.runtime.console PRIVATE Halia.core Halia.common)

file (GLOB_RECURSE cli_source_files "${CMAKE_SOURCE_DIR}/CLI/*.cpp")
add_executable(Halia.cli ${cli_source_files})
set_target_properties(Halia.cli PROPERTIES OUTPUT_NAME "Halia")
target_link_libraries(Halia.cli PRIVATE Halia.common)

add_custom_command(TARGET Halia.core POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory "${resource_dir}" "$<TARGET_FILE_DIR:Halia.core>/resources")
